Name: elm-make
Version: 0.1.1.1337

Synopsis:
    A build tool for Elm projects
Description:
    A nice way to build projects that is aware of both elm-compile and
    elm-package, so it can make the build process very smooth.

Homepage:
    http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2014 Evan Czaplicki

Category: Build Tool

Build-type: Simple
Cabal-version: >=1.9

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-make.git


Library

    ghc-options: 
        -threaded -O2 -W

    hs-source-dirs:
        src

    exposed-modules:
        Elm.Make.Arguments,
        Elm.Make.Main

    other-modules:
        Build,
        CrawlPackage,
        CrawlProject,
        Display,
        Generate,
        LoadInterfaces,
        Path,
        Paths_elm_make,
        TheMasterPlan,
        Utils.File,
        Utils.Queue

    Build-depends:
        ansi-wl-pprint,
        base >=4.2 && <5,
        binary,
        blaze-html,
        blaze-markup,
        bytestring,
        containers >= 0.3,
        directory,
        elm-compiler ==0.14.1.1337,
        elm-package,
        filepath,
        mtl,
        optparse-applicative >=0.10 && <0.11,
        text
